--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/work-management
+MONGODB_URI=mongodb+srv://knownaskawsar:7ikBLf04EmhkxNyB@cluster0.hdcelpk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=LSZv5hL7VnBv9PCSjCbET/bgr5doqnYfCfn9LcrtyJ5GGNz7wKOCdEl6THM
+
+
+
