--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,16 @@
-MONGODB_URI=mongodb+srv://knownaskawsar:7ikBLf04EmhkxNyB@cluster0.hdcelpk.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# Database
+MONGODB_URI=mongodb://localhost:27017/work-management
+
+# NextAuth Configuration
+NEXTAUTH_SECRET=your-secret-key-here
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=LSZv5hL7VnBv9PCSjCbET/bgr5doqnYfCfn9LcrtyJ5GGNz7wKOCdEl6THM
 
+# Email Configuration (for deletion confirmations)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM=your-email@gmail.com
 
-
+# Optional: For production deployment
+# VERCEL_URL=your-vercel-url.vercel.app
